# back/public/swagger.json
@@ -6,7 +6,7 @@
     "requestBodies": {},
     "responses": {},
     "schemas": {
-      "Wine": {
+      "Drink": {
         "properties": {
           "providedBy": {
             "type": "string"
@@ -28,7 +28,7 @@
         "required": ["providedBy", "date", "name", "_id"],
         "type": "object"
       },
-      "Pick_Wine.Exclude_keyofWine._id__": {
+      "Pick_Drink.Exclude_keyofDrink._id__": {
         "properties": {
           "category": {
             "type": "string"
@@ -48,12 +48,12 @@
         "type": "object",
         "description": "From T, pick a set of properties whose keys are in the union K"
       },
-      "Omit_Wine._id_": {
-        "$ref": "#/components/schemas/Pick_Wine.Exclude_keyofWine._id__",
+      "Omit_Drink._id_": {
+        "$ref": "#/components/schemas/Pick_Drink.Exclude_keyofDrink._id__",
         "description": "Construct a type with the properties of T except for those in type K."
       },
-      "CreateWine": {
-        "$ref": "#/components/schemas/Omit_Wine._id_"
+      "DrinkCreation": {
+        "$ref": "#/components/schemas/Omit_Drink._id_"
       }
     },
     "securitySchemes": {}
@@ -68,9 +68,9 @@
   },
   "openapi": "3.0.0",
   "paths": {
-    "/wines": {
+    "/drinks": {
       "get": {
-        "operationId": "GetWines",
+        "operationId": "GetDrinksRoute",
         "responses": {
           "200": {
             "description": "Ok",
@@ -78,7 +78,7 @@
               "application/json": {
                 "schema": {
                   "items": {
-                    "$ref": "#/components/schemas/Wine"
+                    "$ref": "#/components/schemas/Drink"
                   },
                   "type": "array"
                 }
@@ -86,12 +86,12 @@
             }
           }
         },
-        "tags": ["Wines"],
+        "tags": ["Drinks"],
         "security": [],
         "parameters": []
       },
       "post": {
-        "operationId": "CreateBottleWine",
+        "operationId": "AddDrinkRoute",
         "responses": {
           "201": {
             "description": "Created",
@@ -104,7 +104,7 @@
             }
           }
         },
-        "tags": ["Wines"],
+        "tags": ["Drinks"],
         "security": [],
         "parameters": [],
         "requestBody": {
@@ -112,32 +112,29 @@
           "content": {
             "application/json": {
               "schema": {
-                "$ref": "#/components/schemas/CreateWine"
+                "$ref": "#/components/schemas/DrinkCreation"
               }
             }
           }
         }
       }
     },
-    "/wines/{id}": {
+    "/drinks/{id}": {
       "get": {
-        "operationId": "GetWine",
+        "operationId": "GetDrinkRoute",
         "responses": {
           "200": {
             "description": "Ok",
             "content": {
               "application/json": {
                 "schema": {
-                  "items": {
-                    "$ref": "#/components/schemas/Wine"
-                  },
-                  "type": "array"
+                  "$ref": "#/components/schemas/Drink"
                 }
               }
             }
           }
         },
-        "tags": ["Wines"],
+        "tags": ["Drinks"],
         "security": [],
         "parameters": [
           {
@@ -151,7 +148,7 @@
         ]
       },
       "put": {
-        "operationId": "UpdateWine",
+        "operationId": "EditDrinkRoute",
         "responses": {
           "200": {
             "description": "Ok",
@@ -164,7 +161,7 @@
             }
           }
         },
-        "tags": ["Wines"],
+        "tags": ["Drinks"],
         "security": [],
         "parameters": [
           {
@@ -181,20 +178,20 @@
           "content": {
             "application/json": {
               "schema": {
-                "$ref": "#/components/schemas/CreateWine"
+                "$ref": "#/components/schemas/DrinkCreation"
               }
             }
           }
         }
       },
       "delete": {
-        "operationId": "DeleteWine",
+        "operationId": "DeleteDrinkRoute",
         "responses": {
           "204": {
             "description": "No content"
           }
         },
-        "tags": ["Wines"],
+        "tags": ["Drinks"],
         "security": [],
         "parameters": [
           {
